syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.douyin.proto_entity.webcast.im";

import "webcast/im/Common.proto";

//更新时间 : 2023-01-11
message  RoomStatsMessage{
  Common common = 1;
  string displayShort = 2;
  string  displayMiddle = 3;
  string  displayLong = 4;
  int64    displayValue = 5;
  int64  displayVersion = 6;
  bool  incremental = 7;
  bool isHidden = 8;
  int64  total = 9;
  int64  displayType = 10;
}