syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.douyin_hack.proto_entity.webcast.im";

import "webcast/im/Common.proto";
import "webcast/data/User.proto";
import "webcast/data/Image.proto";
import "webcast/im/PublicAreaCommon.proto";
import "webcast/data/Text.proto";
import "webcast/im/LandscapeAreaCommon.proto";

//更新时间 : 2023-01-09
message ChatMessage {
  Common common = 1;
  User user = 2;
  string content = 3;
  bool visibleToSender = 4;
  Image backgroundImage = 5;
  string fullScreenTextColor = 6;
  Image backgroundImageV2 = 7;
  PublicAreaCommon publicAreaCommon = 9;
  Image giftImage = 10;
  int64 agreeMsgId = 11;
  int32  priorityLevel = 12;
  LandscapeAreaCommon landscapeAreaCommon = 13;
  int64 eventTime = 15;
  bool sendReview = 16;
  bool fromIntercom = 17;
  bool intercomHideUserCard = 18;
  int32  chatTagsList = 19;
  int64 chatBy = 20;
  int32 individualChatPriority = 21;
  Text rtfContent = 40;
}
