syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

import "douyin_hack/webcast/data/User.proto";
import "douyin_hack/webcast/data/Room.proto";

// 更新时间 : 2024-07-03
message Common {
    string method = 1;
    int64 msg_id = 2;
    int64 room_id = 3;
    int64 create_time = 4;
    User user = 15;
    Room room = 16;
}
