syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

import "douyin_hack/webcast/im/Common.proto";

// 更新时间 : 2024-07-03
message ControlMessage {
    Common common = 1;
    int64 action = 2;
    string tips = 3;
}
