syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

import "douyin_hack/webcast/im/Common.proto";
import "douyin_hack/webcast/data/User.proto";

// 更新时间 : 2024-07-03
message LikeMessage {
    Common common = 1;
    int64 count = 2;
    int64 total = 3;
    int64 color = 4;
    User user = 5;
    string icon = 6;
}
