syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

import "douyin_hack/webcast/im/Common.proto";
import "douyin_hack/webcast/data/User.proto";

// 更新时间 : 2024-07-03
message RoomRankMessage {
    Common common = 1;
    repeated RoomRank ranks = 2;

    message RoomRank {
        User user = 1;
        string score_str = 2;
        bool profile_hidden = 3;
    }

}
