syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

import "douyin_hack/webcast/data/User.proto";

//更新时间 : 2024-07-03
message SocialMessage {
    User user = 2;
}
